ttothova/teeteeParser.java
// Generated from teetee.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class teeteeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__4=1, T__3=2, T__2=3, T__1=4, T__0=5, IF=6, ELIF=7, ELSE=8, FOR=9, IN=10, 
		DO=11, WHILE=12, RETURN=13, BREAK=14, CONTINUE=15, OPEN_PAR=16, CLOSE_PAR=17, 
		LBRACK=18, RBRACK=19, LBRACE=20, RBRACE=21, COMMA=22, SEMICOLON=23, ASSIGN=24, 
		ADD=25, SUB=26, MUL=27, DIV=28, MOD=29, EXP=30, AND=31, OR=32, NOT=33, 
		EQ=34, NE=35, LT=36, LE=37, GT=38, GE=39, VOID=40, INT=41, FLOAT=42, BOOL=43, 
		STRING=44, CHAR=45, NEWLINE=46, WHITESPACE=47, COMMENT=48, ID=49, DIGIT=50;
	public static final String[] tokenNames = {
		"<INVALID>", "'string'", "'char'", "'int'", "'float'", "'bool'", "'if'", 
		"'elif'", "'else'", "'for'", "'in'", "'do'", "'while'", "'return'", "'break'", 
		"'continue'", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "';'", 
		"'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "AND", "OR", "NOT", "'=='", 
		"'!='", "'<'", "LE", "'>'", "GE", "'void'", "INT", "FLOAT", "BOOL", "STRING", 
		"CHAR", "NEWLINE", "WHITESPACE", "COMMENT", "ID", "DIGIT"
	};
	public static final int
		RULE_init = 0, RULE_block = 1, RULE_statements = 2, RULE_functions = 3, 
		RULE_function = 4, RULE_ftype = 5, RULE_fname = 6, RULE_fparameters = 7, 
		RULE_aarray = 8, RULE_statement = 9, RULE_assignment = 10, RULE_array_resize = 11, 
		RULE_declaration = 12, RULE_decl_var = 13, RULE_return_statement = 14, 
		RULE_if_statement = 15, RULE_if_form = 16, RULE_for_statement = 17, RULE_while_statement = 18, 
		RULE_var = 19, RULE_expression = 20, RULE_callfunction = 21, RULE_type = 22, 
		RULE_id = 23;
	public static final String[] ruleNames = {
		"init", "block", "statements", "functions", "function", "ftype", "fname", 
		"fparameters", "aarray", "statement", "assignment", "array_resize", "declaration", 
		"decl_var", "return_statement", "if_statement", "if_form", "for_statement", 
		"while_statement", "var", "expression", "callfunction", "type", "id"
	};

	@Override
	public String getGrammarFileName() { return "teetee.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public teeteeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
	 
		public InitContext() { }
		public void copyFrom(InitContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InitFunctionsContext extends InitContext {
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public InitFunctionsContext(InitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterInitFunctions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitInitFunctions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitInitFunctions(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InitStatementsContext extends InitContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public InitStatementsContext(InitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterInitStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitInitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitInitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			setState(50);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new InitFunctionsContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(48); functions();
				}
				break;
			case 2:
				_localctx = new InitStatementsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(49); statements();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode RBRACE() { return getToken(teeteeParser.RBRACE, 0); }
		public TerminalNode LBRACE() { return getToken(teeteeParser.LBRACE, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52); match(LBRACE);
			setState(53); statements();
			setState(54); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(teeteeParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(teeteeParser.NEWLINE, i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56); statement();
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(57); match(NEWLINE);
				setState(58); statement();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionsContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(teeteeParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(teeteeParser.NEWLINE, i);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterFunctions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitFunctions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitFunctions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionsContext functions() throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64); function();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(66); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(65); match(NEWLINE);
					}
					}
					setState(68); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				setState(70); function();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public FnameContext fname() {
			return getRuleContext(FnameContext.class,0);
		}
		public TerminalNode OPEN_PAR() { return getToken(teeteeParser.OPEN_PAR, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode CLOSE_PAR() { return getToken(teeteeParser.CLOSE_PAR, 0); }
		public FtypeContext ftype() {
			return getRuleContext(FtypeContext.class,0);
		}
		public FparametersContext fparameters() {
			return getRuleContext(FparametersContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); ftype();
			setState(77); fname();
			setState(78); match(OPEN_PAR);
			setState(79); fparameters();
			setState(80); match(CLOSE_PAR);
			setState(81); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FtypeContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(teeteeParser.VOID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(teeteeParser.RBRACK, 0); }
		public TerminalNode LBRACK() { return getToken(teeteeParser.LBRACK, 0); }
		public FtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ftype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterFtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitFtype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitFtype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FtypeContext ftype() throws RecognitionException {
		FtypeContext _localctx = new FtypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ftype);
		int _la;
		try {
			setState(89);
			switch (_input.LA(1)) {
			case VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(83); match(VOID);
				}
				break;
			case T__4:
			case T__3:
			case T__2:
			case T__1:
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(84); type();
				setState(87);
				_la = _input.LA(1);
				if (_la==LBRACK) {
					{
					setState(85); match(LBRACK);
					setState(86); match(RBRACK);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FnameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(teeteeParser.ID, 0); }
		public FnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterFname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitFname(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitFname(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FnameContext fname() throws RecognitionException {
		FnameContext _localctx = new FnameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FparametersContext extends ParserRuleContext {
		public List<AarrayContext> aarray() {
			return getRuleContexts(AarrayContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public AarrayContext aarray(int i) {
			return getRuleContext(AarrayContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(teeteeParser.COMMA); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(teeteeParser.COMMA, i);
		}
		public FparametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fparameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterFparameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitFparameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitFparameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FparametersContext fparameters() throws RecognitionException {
		FparametersContext _localctx = new FparametersContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fparameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << T__0))) != 0)) {
				{
				setState(93); type();
				setState(94); id();
				setState(95); aarray();
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(96); match(COMMA);
					setState(97); type();
					setState(98); id();
					setState(99); aarray();
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AarrayContext extends ParserRuleContext {
		public AarrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aarray; }
	 
		public AarrayContext() { }
		public void copyFrom(AarrayContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrayContext extends AarrayContext {
		public TerminalNode RBRACK() { return getToken(teeteeParser.RBRACK, 0); }
		public TerminalNode LBRACK() { return getToken(teeteeParser.LBRACK, 0); }
		public ArrayContext(AarrayContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitArray(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotArrayContext extends AarrayContext {
		public NotArrayContext(AarrayContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterNotArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitNotArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitNotArray(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AarrayContext aarray() throws RecognitionException {
		AarrayContext _localctx = new AarrayContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_aarray);
		try {
			setState(111);
			switch (_input.LA(1)) {
			case LBRACK:
				_localctx = new ArrayContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(108); match(LBRACK);
				setState(109); match(RBRACK);
				}
				break;
			case CLOSE_PAR:
			case COMMA:
				_localctx = new NotArrayContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RetContext extends StatementContext {
		public Return_statementContext return_statement() {
			return getRuleContext(Return_statementContext.class,0);
		}
		public RetContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterRet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitRet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitRet(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EmptyContext extends StatementContext {
		public EmptyContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitEmpty(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ResizeContext extends StatementContext {
		public Array_resizeContext array_resize() {
			return getRuleContext(Array_resizeContext.class,0);
		}
		public ResizeContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterResize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitResize(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitResize(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForContext extends StatementContext {
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public ForContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitFor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BreakContext extends StatementContext {
		public TerminalNode BREAK() { return getToken(teeteeParser.BREAK, 0); }
		public BreakContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterBreak(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitBreak(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitBreak(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignContext extends StatementContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AssignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Block_stmtContext extends StatementContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Block_stmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterBlock_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitBlock_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitBlock_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclareContext extends StatementContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclareContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).exitDeclare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof teeteeVisitor ) return ((teeteeVisitor<? extends T>)visitor).visitDeclare(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ContinueContext extends StatementContext {
		public TerminalNode CONTINUE() { return getToken(teeteeParser.CONTINUE, 0); }
		public ContinueContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof teeteeListener ) ((teeteeListener)listener).enterContinue(this);
		}
		@Override
